Mail: Calendar attachments can be broken by the server
Hello all!
[Bug report as requested by Milan Crha]
Just logged on and checked my mail and found weird looking calendar invites in my Evolution Mail.
The text in them states
"The calendar attached is not valid The message claims to contain a calendar, but the calendar is not a valid iCalendar."
Looking at these mails in M365 on the web with Firefox, they look okay, if not as they used to.
Did Microsoft just change something again making Evolution Mail keel over?
- Running Kubuntu 22.04.
- Plasma 5.27.10 (from backports and backport-extras).
- Evolution Mail 3.44.4-0ubuntu2.
- Using Evolution-ews plugin.
Milans reply from evolution-users evolution-users@lists.osuosl.org:
I tried it here with the current development version of
the evolution-ews and it also fails to generate proper iCalendar
attachment. It did work, thus I guess it's some change on the Microsoft
Exchange server, as you suggested. Looking into the message source, the
text/calendar part has missing `END:VCALENDAR` line for some reason.
If more info is needed, please let me know! Thanks.
Edited by Adrian von Grueningen