I#250 - Mail: Calendar attachments can be broken by the server

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/250